--- a/css/style.css
+++ b/css/style.css
@@ -572,7 +572,7 @@ body {
 		margin-bottom: 40px;
 	}
 	.sample-doggie__img {
-		margin-bottom: 100px;
+		margin-bottom: 80px;
 	}
 	.sample-doggie__sub-title:not(:last-child) {
 		margin: 0px 0px 10px 0px;
@@ -602,7 +602,16 @@ body {
 	.nemo__container::before {
 		display: none;
 	}
-	.nemo__image {
+	.sample-doggie__img {
+		width: 90%;
+		max-height: 420px;
+		box-shadow: 0px 8px 16px rgb(38 38 38 / 24%), 0px 16px 24px rgb(38 38 38 / 20%);
+		border-radius: 40px;
+		bottom: -120px;
+		position: relative;
+		z-index: 1;
+	}
+	/* .nemo__image {
 		max-width: 744px;
 		max-height: 456px;
 		width: 60%;
@@ -610,7 +619,7 @@ body {
 		top: 150px;
 		left: -20px;
 		z-index: 5;
-	}
+	} */
 }
 @media (max-width: 425.98px) {
 	.header__items {
