--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,9 @@ body {
 	max-height: 41px;
 }
 .header__items {
+	flex: 1 1 auto;
 	display: flex;
+	justify-content: flex-end;
 	column-gap: 31px;
 }
 .header__item {
@@ -88,11 +90,12 @@ body {
 	outline: 2px solid #F2726F;
 }
 .header__nav {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
 	background: #FFFFFF;
 	border-radius: 10px;
-	padding: 10px 48px 10px 40px;
-	display: flex;
-	justify-content: space-between;
+	padding: 18px 40px;
 	column-gap: 50px;
 	min-height: 60px;
 	align-items: center;
@@ -358,7 +361,7 @@ body {
 		margin-bottom: 50px;
 	}
 }
-@media (max-width: 830px) {
+@media (max-width: 991.98px) {
 	.header__button {
 		display: none;
 	}
@@ -527,7 +530,7 @@ body {
 		justify-content: flex-end;
 		position: relative;
 	}
-	.header__nav::before {
+	.nav__header_button::before {
 		content: "";
 		background: url("../img/pngwing.png") 0 0 / 100% no-repeat;
 		width: 25px;
@@ -602,7 +605,7 @@ body {
 	.nemo__container::before {
 		display: none;
 	}
-	.sample-doggie__img {
+	/* .sample-doggie__img {
 		width: 90%;
 		max-height: 420px;
 		box-shadow: 0px 8px 16px rgb(38 38 38 / 24%), 0px 16px 24px rgb(38 38 38 / 20%);
@@ -610,8 +613,8 @@ body {
 		bottom: -120px;
 		position: relative;
 		z-index: 1;
-	}
-	/* .nemo__image {
+	} */
+	.nemo__image {
 		max-width: 744px;
 		max-height: 456px;
 		width: 60%;
@@ -619,7 +622,7 @@ body {
 		top: 150px;
 		left: -20px;
 		z-index: 5;
-	} */
+	}
 }
 @media (max-width: 425.98px) {
 	.header__items {
@@ -675,10 +678,27 @@ body {
 		padding: 50px 0px 0px 0px;
 		margin-bottom: 50px;
 	}
+	.nav-header__icons {
+		display: flex;
+		column-gap: 16px;
+	}
 }
 @media (max-width: 375.98px) {
 	.nemo__title:not(:last-child) {
 		margin: -70px 0px 100px 0px;
+	}
+	.nav__header_button::before {
+		content: "";
+		background: url("../img/pngwing.png") 0 0 / 100% no-repeat;
+		width: 21px;
+		height: 21px;
+		top: 13px;
+		left: 14px;
+		position: absolute;
+	}
+	.nav-header__icons {
+		display: flex;
+		column-gap: 14px;
 	}
 }
 @media (max-width: 320.98px) {
@@ -688,18 +708,14 @@ body {
 	.main-body__title {
 		font-size: 26px;
 	}
-	.header__nav::before {
+	.nav__header_button::before {
 		content: "";
 		background: url("../img/pngwing.png") 0 0 / 100% no-repeat;
-		width: 18px;
-		height: 18px;
-		top: 12px;
-		left: 15px;
+		width: 19px;
+		height: 19px;
+		top: 15px;
+		left: 12px;
 		position: absolute;
-	}
-	.header__nav {
-		padding: 5px 18px 5px 18px;
-		min-height: 40px;
 	}
 	.header__top {
 		row-gap: 15px;
@@ -767,5 +783,9 @@ body {
 		position: relative;
 		padding: 10px 0px 0px 0px;
 		margin-bottom: 50px;
+	}
+	.nav-header__icons {
+		display: flex;
+		column-gap: 10px;
 	}
 }
